--- a/front/package.json
+++ b/front/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
-    "element-ui": "^2.15.6",
+    "element-ui": "^2.15.8",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vue-jsonp": "^2.0.0",
+    "vue-ueditor-wrap": "^2.5.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
