--- a/front/package.json
+++ b/front/package.json
@@ -8,14 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "1.7.8",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.8",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
     "vue-jsonp": "^2.0.0",
-    "vue-ueditor-wrap": "^2.5.6"
+    "vue-router": "^3.2.0",
+    "vue-ueditor-wrap": "^2.5.6",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
@@ -26,6 +27,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.5",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
