--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "vue-jsonp": "^2.0.0",
     "vue-router": "^3.2.0",
     "vue-ueditor-wrap": "^2.5.6",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
